# fastapi-learning-crud

./: auth.py  config.py  database.py  main.py  models.py  pyproject.toml  schemas.py
routers/: users.py
static/js/: utils.js
templates/: layout.html
